<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearNota">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/navy_blue"
            android:elevation="4dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:gravity="center_vertical"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <EditText
                android:id="@+id/editTextTituloNota"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_titulo_nota"
                android:inputType="text"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/contenedorNota"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                android:background="#EEEEEE"
                app:layout_constraintTop_toBottomOf="@id/editTextTituloNota"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/barraHerramientas" />

            <LinearLayout
                android:id="@+id/barraHerramientas"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="#303030"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageButton
                    android:id="@+id/btnAgregarImagen"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_image"
                    android:contentDescription="@string/boton_agregar_imagen"
                    app:tint="@android:color/white" />

                <ImageButton
                    android:id="@+id/btnAgregarAudio"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_audio"
                    android:contentDescription="@string/boton_agregar_audio"
                    app:tint="@android:color/white" />

                <ImageButton
                    android:id="@+id/btnAgregarTexto"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_text"
                    android:contentDescription="@string/boton_agregar_texto"
                    app:tint="@android:color/white" />

                <ImageButton
                    android:id="@+id/btnGuardarNota"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_save"
                    android:contentDescription="@string/boton_guardar"
                    app:tint="@android:color/white" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu_lateral"
        app:headerLayout="@layout/nav_header" />

</androidx.drawerlayout.widget.DrawerLayout>
